Fixed editor-tabs overflow handling

--- a/cms-ui/apps/editor-ui/src/app/content-frame/components/editor-toolbar/editor-toolbar.component.scss
+++ b/cms-ui/apps/editor-ui/src/app/content-frame/components/editor-toolbar/editor-toolbar.component.scss
@@ -43,6 +43,7 @@
             flex-wrap: nowrap;
             overflow: hidden;
             align-items: center;
+            flex: 1 1 auto;
         }
     }
 
